--- a/Nexter/sass/_gallery.scss
+++ b/Nexter/sass/_gallery.scss
@@ -8,6 +8,11 @@
   gap: 1.5rem;
   padding: 1.5rem;
 
+  @media only screen and (max-width: $bp-small) {
+    gap: 0.75rem;
+    padding: 0.75rem;
+  }
+
   &__item {
     &--1 {
       grid-column: 1 / span 2;
